--- a/style.css
+++ b/style.css
@@ -285,6 +285,8 @@ a:hover {
 
 #bloc-1-hero h1 {
     font-size: 32px;
+    text-align: center;
+    color: #F3976C;
 }
 
 .navbar {
@@ -407,10 +409,6 @@ a:hover {
     background: none!important;
     display: block;
     padding: 14px 15px;
-}
-
-nav .caret {
-    margin: 0 5px;
 }
 
 .dropdown-menu .dropdown-menu {
@@ -639,8 +637,6 @@ a[data-lightbox]:hover img {
     background: none;
 }
 
-h1,
-h2,
 h3,
 h4,
 h5,
@@ -685,11 +681,6 @@ p {
     margin: auto auto auto auto;
 }
 
-.h1 {
-    font-size: 20px;
-    font-family: "Open Sans";
-}
-
 .cta-hero {
     margin-top: 22px;
     color: #FFFFFF!important;
@@ -707,6 +698,10 @@ p {
 h2 {
     font-size: 22px;
     line-height: 1.4em;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    color: #F3976C;
 }
 
 h3 {
@@ -720,10 +715,6 @@ h3 {
     max-width: 800px;
     margin: auto auto auto auto;
     box-shadow: 0px 0px 0px #000000;
-}
-
-h1 {
-    color: #333333!important;
 }
 
 h4 {
@@ -775,7 +766,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: white;
 }
 
 .btn-atomic-tangerine {
@@ -1026,17 +1017,14 @@ h4 {
         width: 180px;
         height: 320px;
     }
-}
 
+    .bloc-mob-center-text {
+        text-align: center;
+    }
+}
 @media (max-width: 400px) {
     .bloc {
         padding-left: 0;
         padding-right: 0;
-    }
-}
-
-@media (max-width: 767px) {
-    .bloc-mob-center-text {
-        text-align: center;
     }
 }
