--- a/style.css
+++ b/style.css
@@ -18,15 +18,6 @@ a:hover {
     cursor: pointer;
 }
 
-#page-loading-blocs-notifaction {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    z-index: 100000;
-    background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
-}
-
 .bloc {
     width: 100%;
     clear: both;
@@ -693,6 +684,7 @@ p {
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
+    padding-bottom: 20px;
 }
 
 h2 {
@@ -757,7 +749,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #b25f38;
 }
 
 .tc-white {
@@ -765,7 +757,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #b25f38;
     color: #FFFFFF!important;
 }
 
@@ -986,14 +978,8 @@ h4 {
     .a-block {
         padding: 0 10px;
     }
-    .btn-dwn {
-        display: none;
-    }
     .voffset {
         margin-top: 5px;
-    }
-    .voffset-md {
-        margin-top: 20px;
     }
     .voffset-lg {
         margin-top: 30px;
