--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ a:hover {
 .d-bloc .navbar a,
 .d-bloc .navbar-brand,
 .d-bloc a .icon-sm,
-.d-bloc a .icon-md,
+.d-bloc a ,
 .d-bloc a .icon-lg,
 .d-bloc a .icon-xl,
 .d-bloc h1 a,
@@ -230,7 +230,7 @@ a:hover {
 .l-bloc .navbar a:hover,
 .l-bloc .navbar-brand:hover,
 .l-bloc a:hover .icon-sm,
-.l-bloc a:hover .icon-md,
+.l-bloc a:hover,
 .l-bloc a:hover .icon-lg,
 .l-bloc a:hover .icon-xl,
 .l-bloc h1 a:hover,
@@ -365,7 +365,7 @@ a:hover {
     }
     .nav > li .dropdown-menu a,
     .nav > li .dropdown-menu a:hover {
-        color: #484848;
+        color: #ffffff;
     }
     .nav-invert .site-navigation {
         left: 0;
@@ -466,6 +466,10 @@ button {
 
 .icon-md {
     font-size: 30px!important;
+    color: #FFFFFF;
+}
+.icon-md:hover {
+    color: #1877F2;
 }
 
 .icon-lg {
@@ -911,9 +915,7 @@ h4 {
         padding-left: 15px;
         width: 100%;
     }
-    .nav > li:hover {
-        background: rgba(0, 0, 0, .08);
-    }
+   
     .dropdown .dropdown a .caret {
         float: none;
         margin: 5px 0 0 10px!important;
