--- a/style.css
+++ b/style.css
@@ -620,6 +620,12 @@ p {
     text-align: center;
     color: #F3976C;
 }
+h2 {
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #333333!important;
+}
 
 h3 {
     font-size: 15px;
@@ -770,7 +776,7 @@ h4 {
     .b-parallax {
         background-attachment: scroll;
     }
-    .page-container, #hero-bloc {
+    body, #hero-bloc {
         overflow-x: hidden;
         position: relative;
     }
@@ -790,7 +796,7 @@ h4 {
 }
 
 @media (max-width: 767px) {
-    .page-container {
+    body {
         overflow-x: hidden;
         position: relative;
     }
