--- a/style.css
+++ b/style.css
@@ -141,7 +141,10 @@ a:hover {
     color: rgba(0, 0, 0, .7);
     border-color: rgba(0, 0, 0, .3);
 }
-
+.col-sm-6 img {
+    width: 300px;
+    height: 300px;
+}
 .d-bloc .panel, .l-bloc {
     color: rgba(0, 0, 0, .5);
 }
@@ -668,6 +671,7 @@ h4 {
 }
 
 .portfolio-row {
+    display: flex;
     margin-bottom: 44px;
     margin-top: 50px;
 }
@@ -878,6 +882,16 @@ h4 {
     .nav-invert .navbar-toggle {
         float: left;
         margin-left: 10px;
+    }
+    .portfolio-row {
+        flex-direction: column;
+    }
+    .row .portfolio-row .col-sm-6 {
+        margin-left: 100px;
+        
+    }
+    .col-sm-6 a {
+        width: 300px;
     }
     .bloc {
         padding-left: 0;
