--- a/style.css
+++ b/style.css
@@ -145,6 +145,9 @@ a:hover {
     width: 300px;
     height: 300px;
 }
+.col-xs-12 img {
+    max-width: 100%;
+}
 .d-bloc .panel, .l-bloc {
     color: rgba(0, 0, 0, .5);
 }
@@ -891,7 +894,9 @@ h4 {
         float: left;
         margin-left: 10px;
     }
-
+    .text1 p {
+        font-size: 1.5em;
+    }
     .portfolio-row {
         flex-direction: column;
     }
