--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ a:hover {
 }
 
 .d-bloc .panel {
-    color: rgba(0, 0, 0, .5);
+    color: rgba(0, 0, 0, .6);
 }
 
 .d-bloc .panel button:hover {
@@ -141,15 +141,29 @@ a:hover {
     color: rgba(0, 0, 0, .7);
     border-color: rgba(0, 0, 0, .3);
 }
+.col-sm-6 {
+    width: 300px;
+    padding: 0;
+}
 .col-sm-6 img {
     width: 300px;
     height: 300px;
+}
+.col-sm-6 p {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.form_0 {
+    width: 400px;
+}
+#form_1 {
+    padding-left: 25px;
 }
 .col-xs-12 img {
     max-width: 100%;
 }
 .d-bloc .panel, .l-bloc {
-    color: rgba(0, 0, 0, .5);
+    color: rgba(0, 0, 0, .6);
 }
 
 .d-bloc .panel button:hover, .l-bloc button:hover {
@@ -264,7 +278,7 @@ a:hover {
 }
 
 .navbar-toggle .icon-bar {
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, .6);
     width: 26px;
 }
 
@@ -489,7 +503,7 @@ a[data-lightbox]:hover img {
 .lightbox-caption {
     padding: 20px;
     color: #FFF;
-    background: rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, .6);
     position: absolute;
     left: 15px;
     right: 15px;
@@ -503,7 +517,7 @@ a[data-lightbox]:hover img {
     top: 20px;
     right: 20px;
     z-index: 20;
-    background: rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, .6);
     border: none;
     line-height: 30px;
     padding: 0 9px 5px;
@@ -518,7 +532,7 @@ a[data-lightbox]:hover img {
 .next-lightbox, .prev-lightbox {
     font-size: 20px;
     color: rgba(255, 255, 255, .9);
-    background: rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, .6);
     transition: all .2s ease-in-out;
     position: absolute;
     top: 45%;
@@ -542,7 +556,7 @@ a[data-lightbox]:hover img {
 
 .snapshot-lb .lightbox-caption {
     padding: 0;
-    color: rgba(0, 0, 0, .5);
+    color: rgba(0, 0, 0, .6);
     background: none;
 }
 
@@ -677,12 +691,11 @@ h4 {
     font-size: 0.4em;
 }
 
-.portfolio-thumb {
-    margin-bottom: 24px;
-}
-
 .portfolio-row {
+    width: 630px;
     display: flex;
+    justify-content: space-between;
+    margin: auto auto auto auto;
     margin-bottom: 44px;
     margin-top: 50px;
 }
@@ -894,16 +907,22 @@ h4 {
         float: left;
         margin-left: 10px;
     }
+    .premier {
+        font-size: 20px;
+    }
     .text1 p {
         font-size: 1.5em;
     }
     .portfolio-row {
+        width: 100%;
         flex-direction: column;
+        align-items: center;
     }
     .col-sm-6 {
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: 300px;
     }
    
     .bloc {
